Add 'spring-security-messaging' if integration and securty is selected
With Spring Integration 6.3+, which is included in Spring Boor 3.3+,
there's no longer a spring-integration-security module. It has been
superseded by spring-security-messaging. See https://docs.spring
.io/spring-integration/reference/security.html

Closes gh-1626