@@ -16,7 +16,8 @@
 
 package io.spring.start.site.extension.dependency.springintegration;
 
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
@@ -24,6 +25,9 @@ import io.spring.initializr.generator.buildsystem.Build;
 import io.spring.initializr.generator.buildsystem.Dependency;
 import io.spring.initializr.generator.buildsystem.DependencyScope;
 import io.spring.initializr.generator.spring.documentation.HelpDocument;
+import io.spring.initializr.generator.version.Version;
+import io.spring.initializr.generator.version.VersionParser;
+import io.spring.initializr.generator.version.VersionRange;
 import io.spring.start.site.support.implicit.ImplicitDependency;
 import io.spring.start.site.support.implicit.ImplicitDependency.Builder;
 
@@ -32,48 +36,57 @@ import io.spring.start.site.support.implicit.ImplicitDependency.Builder;
  *
  * @author Artem Bilan
  * @author Stephane Nicoll
+ * @author Moritz Halbritter
  */
 abstract class SpringIntegrationModuleRegistry {
 
-	static Iterable<ImplicitDependency> create() {
-		return create(
-				onDependencies("activemq", "artemis").customizeBuild(addDependency("jms"))
-					.customizeHelpDocument(addReferenceLink("JMS Module", "jms")),
-				onDependencies("amqp", "amqp-streams").customizeBuild(addDependency("amqp"))
-					.customizeHelpDocument(addReferenceLink("AMQP Module", "amqp")),
-				onDependencies("data-jdbc", "jdbc").customizeBuild(addDependency("jdbc"))
-					.customizeHelpDocument(addReferenceLink("JDBC Module", "jdbc")),
-				onDependencies("data-jpa").customizeBuild(addDependency("jpa"))
-					.customizeHelpDocument(addReferenceLink("JPA Module", "jpa")),
-				onDependencies("data-mongodb", "data-mongodb-reactive").customizeBuild(addDependency("mongodb"))
-					.customizeHelpDocument(addReferenceLink("MongoDB Module", "mongodb")),
-				onDependencies("data-r2dbc").customizeBuild(addDependency("r2dbc"))
-					.customizeHelpDocument(addReferenceLink("R2DBC Module", "r2dbc")),
-				onDependencies("data-redis", "data-redis-reactive").customizeBuild(addDependency("redis"))
-					.customizeHelpDocument(addReferenceLink("Redis Module", "redis")),
-				onDependencies("integration").customizeBuild(addDependency("test", DependencyScope.TEST_COMPILE))
-					.customizeHelpDocument(addReferenceLink("Test Module", "testing")),
-				onDependencies("kafka", "kafka-streams").customizeBuild(addDependency("kafka"))
-					.customizeHelpDocument(addReferenceLink("Apache Kafka Module", "kafka")),
-				onDependencies("mail").customizeBuild(addDependency("mail"))
-					.customizeHelpDocument(addReferenceLink("Mail Module", "mail")),
-				onDependencies("rsocket").customizeBuild(addDependency("rsocket"))
-					.customizeHelpDocument(addReferenceLink("RSocket Module", "rsocket")),
-				onDependencies("security").customizeBuild(addDependency("security"))
-					.customizeHelpDocument(addReferenceLink("Security Module", "security")),
-				onDependencies("web").customizeBuild(addDependency("http"))
-					.customizeHelpDocument(addReferenceLink("HTTP Module", "http")),
-				onDependencies("webflux").customizeBuild(addDependency("webflux"))
-					.customizeHelpDocument(addReferenceLink("WebFlux Module", "webflux")),
-				onDependencies("websocket").customizeBuild(addDependency("stomp").andThen(addDependency("websocket")))
-					.customizeHelpDocument(addReferenceLink("STOMP Module", "stomp")
-						.andThen(addReferenceLink("WebSocket Module", "web-sockets"))),
-				onDependencies("web-services").customizeBuild(addDependency("ws"))
-					.customizeHelpDocument(addReferenceLink("Web Services Module", "ws")));
-	}
+	private static final VersionRange SPRING_BOOT_3_3_OR_LATER = VersionParser.DEFAULT.parseRange("3.3.0");
 
-	private static Iterable<ImplicitDependency> create(ImplicitDependency.Builder... dependencies) {
-		return Arrays.stream(dependencies).map(Builder::build).collect(Collectors.toList());
+	static Iterable<ImplicitDependency> create(Version platformVersion) {
+		List<Builder> builders = new ArrayList<>();
+		builders.add(onDependencies("activemq", "artemis").customizeBuild(addDependency("jms"))
+			.customizeHelpDocument(addReferenceLink("JMS Module", "jms")));
+		builders.add(onDependencies("amqp", "amqp-streams").customizeBuild(addDependency("amqp"))
+			.customizeHelpDocument(addReferenceLink("AMQP Module", "amqp")));
+		builders.add(onDependencies("data-jdbc", "jdbc").customizeBuild(addDependency("jdbc"))
+			.customizeHelpDocument(addReferenceLink("JDBC Module", "jdbc")));
+		builders.add(onDependencies("data-jpa").customizeBuild(addDependency("jpa"))
+			.customizeHelpDocument(addReferenceLink("JPA Module", "jpa")));
+		builders.add(onDependencies("data-mongodb", "data-mongodb-reactive").customizeBuild(addDependency("mongodb"))
+			.customizeHelpDocument(addReferenceLink("MongoDB Module", "mongodb")));
+		builders.add(onDependencies("data-r2dbc").customizeBuild(addDependency("r2dbc"))
+			.customizeHelpDocument(addReferenceLink("R2DBC Module", "r2dbc")));
+		builders.add(onDependencies("data-redis", "data-redis-reactive").customizeBuild(addDependency("redis"))
+			.customizeHelpDocument(addReferenceLink("Redis Module", "redis")));
+		builders.add(onDependencies("integration").customizeBuild(addDependency("test", DependencyScope.TEST_COMPILE))
+			.customizeHelpDocument(addReferenceLink("Test Module", "testing")));
+		builders.add(onDependencies("kafka", "kafka-streams").customizeBuild(addDependency("kafka"))
+			.customizeHelpDocument(addReferenceLink("Apache Kafka Module", "kafka")));
+		builders.add(onDependencies("mail").customizeBuild(addDependency("mail"))
+			.customizeHelpDocument(addReferenceLink("Mail Module", "mail")));
+		builders.add(onDependencies("rsocket").customizeBuild(addDependency("rsocket"))
+			.customizeHelpDocument(addReferenceLink("RSocket Module", "rsocket")));
+		if (SPRING_BOOT_3_3_OR_LATER.match(platformVersion)) {
+			builders.add(onDependencies("security")
+				.customizeBuild(addDependency("spring-security-messaging", "org.springframework.security",
+						"spring-security-messaging", DependencyScope.COMPILE))
+				.customizeHelpDocument(addReferenceLink("Security Module", "security")));
+		}
+		else {
+			builders.add(onDependencies("security").customizeBuild(addDependency("security"))
+				.customizeHelpDocument(addReferenceLink("Security Module", "security")));
+		}
+		builders.add(onDependencies("web").customizeBuild(addDependency("http"))
+			.customizeHelpDocument(addReferenceLink("HTTP Module", "http")));
+		builders.add(onDependencies("webflux").customizeBuild(addDependency("webflux"))
+			.customizeHelpDocument(addReferenceLink("WebFlux Module", "webflux")));
+		builders
+			.add(onDependencies("websocket").customizeBuild(addDependency("stomp").andThen(addDependency("websocket")))
+				.customizeHelpDocument(addReferenceLink("STOMP Module", "stomp")
+					.andThen(addReferenceLink("WebSocket Module", "web-sockets"))));
+		builders.add(onDependencies("web-services").customizeBuild(addDependency("ws"))
+			.customizeHelpDocument(addReferenceLink("Web Services Module", "ws")));
+		return builders.stream().map(Builder::build).collect(Collectors.toList());
 	}
 
 	private static ImplicitDependency.Builder onDependencies(String... dependencyIds) {
@@ -85,15 +98,16 @@ abstract class SpringIntegrationModuleRegistry {
 	}
 
 	private static Consumer<Build> addDependency(String id, DependencyScope scope) {
-		return (build) -> build.dependencies()
-			.add("integration-" + id,
-					Dependency.withCoordinates("org.springframework.integration", "spring-integration-" + id)
-						.scope(scope));
+		return addDependency("integration-" + id, "org.springframework.integration", "spring-integration-" + id, scope);
+	}
+
+	private static Consumer<Build> addDependency(String id, String groupId, String artifactId, DependencyScope scope) {
+		return (build) -> build.dependencies().add(id, Dependency.withCoordinates(groupId, artifactId).scope(scope));
 	}
 
 	private static Consumer<HelpDocument> addReferenceLink(String name, String id) {
 		return (helpDocument) -> {
-			String href = String.format("https://docs.spring.io/spring-integration/reference/html/%s.html", id);
+			String href = "https://docs.spring.io/spring-integration/reference/%s.html".formatted(id);
 			String description = String.format("Spring Integration %s Reference Guide", name);
 			helpDocument.gettingStarted().addReferenceDocLink(href, description);
 		};
